finished index front

--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "geolib": "^3.3.3",
     "next": "13.2.4",
     "react": "^18.2.0",
+    "react-countup": "^6.4.2",
     "react-date-range": "^1.4.0",
     "react-datepicker": "^4.10.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
     "react-map-gl": "^7.0.21",
     "react-slick": "^0.29.0",
+    "react-visibility-sensor": "^5.1.1",
     "slick-carousel": "^1.8.1",
     "tailwind-scrollbar-hide": "^1.1.7",
     "typescript": "5.0.2"
