added save stays

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@badrap/bar-of-progress": "^0.2.2",
     "@heroicons/react": "^2.0.16",
+    "@next-auth/mongodb-adapter": "^1.1.1",
     "@types/node": "18.15.3",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
@@ -18,7 +19,10 @@
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "geolib": "^3.3.3",
+    "mongodb": "^4.15.0",
+    "mongoose": "^7.0.3",
     "next": "13.2.4",
+    "next-auth": "^4.21.1",
     "react": "^18.2.0",
     "react-countup": "^6.4.2",
     "react-date-range": "^1.4.0",
