--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,6 @@
     "**/*.tsx",
     "components/Map.jsx",
     "components/Map.jsx"
-  ],
+, "pages/api/auth/[...nextauth].js"  ],
   "exclude": ["node_modules"]
 }
