--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-slick": "^0.29.0",
     "react-visibility-sensor": "^5.1.1",
     "slick-carousel": "^1.8.1",
+    "swr": "^2.1.3",
     "tailwind-scrollbar-hide": "^1.1.7",
     "typescript": "5.0.2"
   },
