--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "geolib": "^3.3.3",
+    "mapbox-gl": "^2.15.0",
     "mongodb": "^4.15.0",
     "mongoose": "^7.0.3",
     "next": "13.2.4",
